flicker fix

--- a/MrVeggie/MrVeggie/wwwroot/css/bootstrap.css
+++ b/MrVeggie/MrVeggie/wwwroot/css/bootstrap.css
@@ -4179,7 +4179,8 @@ input[type=submit].btn-block {
     align-items: center;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    padding: .5rem 1rem
+    padding: .5rem 1rem;
+    -webkit-backface-visibility: hidden;
 }
 
 .navbar>.container,
